modifications contenu textuel anglais autres projets

--- a/en/page autres projets.html
+++ b/en/page autres projets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Autres projets</title>
+    <title>Others projects</title>
 
     <script src="//unpkg.com/alpinejs" defer></script>
     <link rel="stylesheet" href="/src/css/style.css">
@@ -39,62 +39,62 @@
         </nav>
     </header>
     <section class="section-1-1">
-    <p  class="titre-2">Autres projets</p>
+    <p  class="titre-2">Others projects</p>
         <hr class="ligne-1-article">
     </section>
     <section>
         <img class="img-articles" src="/public/img/Asterix et Obelix mission Chleopatre 1.webp" alt="">
-        <p>"Mission Cléopâtre" réalisé par Chloé Vincent sur le film “Astérix et Obélix: mission Cléopâtre”</p>
+        <p>"Mission Cléopâtre" directed by Chloé Vincent about the movie "Asterix & Obelix: Mission Cleopatra."</p>
         <hr class="ligne-1-2">
     </section>
     <section>
         <img class="img-articles" src="/public/img/Kaamelott 1.webp" alt="">
-        <p>"Kaalsifis" réalisé par Maëlle Coquelet sur le film “Kaamelott : Premier Volet”</p>
+        <p>"Kaalsifis" directed by Maëlle Coquelet about the movie "Kaamelott: Premier Volet."</p>
         <hr class="ligne-1-2">
     </section>
     <section>
         <img class="img-articles" src="/public/img/Le chateau ambulant 1.webp" alt="">
-        <p>“MysticHowl” réalisé par Anis Amrouche sur le film “Le château ambulant”</p>
+        <p>"MysticHowl" directed by Anis Amrouche about the movie "Howl's Moving Castle."</p>
         <hr class="ligne-1-2">
     </section>
     <section>
         <img class="img-articles" src="/public/img/affiche-film-hunger-games-26772 1.webp" alt="">
-        <p>"Hope Games" réalisé par Noélie Talhouarn sur le film “Hunger Games”</p>
+        <p>"Hope Games" directed by Noélie Talhouarn about the movie "Hunger Games."</p>
         <hr class="ligne-1-2">
     </section>
     <section>
         <img class="img-articles" src="/public/img/Alien le 8eme passager 1.webp" alt="">
-        <p>"Alien from space" réalisé par Max Prin sur le film “Alien le 8eme passager”</p>
+        <p>"Alien from Space" directed by Max Prin about the movie "Alien, the 8th Passenger."</p>
         <hr class="ligne-1-2">
     </section>
     <section>
         <img class="img-articles" src="/public/img/Fight Club 1.webp" alt="">
-        <p>"Insomnia" réalisé par Matys Ouvrard sur le film “Fight Club”</p>
+        <p>"Insomnia" directed by Matys Ouvrard about the movie "Fight Club."</p>
         <hr class="ligne-1-2">
     </section>
     <section>
         <img class="img-articles" src="/public/img/Scarface 1.webp" alt="">
-        <p>"ScarInfo" réalisé par Matthis Boreaniz sur le film "Scarface"</p>
+        <p>"ScarInfo" directed by Matthis Boreaniz about the movie "Scarface."</p>
         <hr class="ligne-1-2">
     </section>
     <section>
         <img class="img-articles" src="/public/img/Le seigneur des anneaux 1.webp" alt="">
-        <p>"La confrérie" réalisé par Kilian Breuil sur le film “Seigneur des Anneaux : Les Deux Tours”</p>
+        <p>"La Confrérie" directed by Kilian Breuil about the movie "The Lord of the Rings: The Two Towers."</p>
         <hr class="ligne-1-2">
     </section>
     <section>
         <img class="img-articles" src="/public/img/Inception 1.webp" alt="">
-        <p>"Senseception" réalisé par Lola Roth sur le film “Inception”</p>
+        <p>"Senseception" directed by Lola Roth about the movie "Inception."</p>
         <hr class="ligne-1-2">
     </section>
     <section>
         <img class="img-articles" src="/public/img/Rush 1.webp" alt="">
-        <p>"Rush Racing Rivals" réalisé par Antoine Fabre sur le film “Rush”</p>
+        <p>"Rush Racing Rivals" directed by Antoine Fabre about the movie "Rush."</p>
         <hr class="ligne-1-2">
     </section>
     <section>
         <img class="img-articles" src="/public/img/Paprika 1.webp" alt="">
-        <p>"Paprik-IA" réalisé par Ronan Lefour sur le film “Paprika”</p>
+        <p>"Paprik-IA" directed by Ronan Lefour about the movie "Paprika."</p>
         <hr class="ligne-1-2">
     </section>
     <footer class="footer">
