--- a/en/page contact.html
+++ b/en/page contact.html
@@ -39,7 +39,7 @@
     </nav>
 </header>
     <section>
-        <h2>Formulaire</h2>
+        <h2>Form</h2>
       <form action="#">
         <div>
           <label for="first-name">First name</label>
