--- a/fr/page contact.html
+++ b/fr/page contact.html
@@ -42,18 +42,18 @@
         <h2>Formulaire</h2>
       <form action="#">
         <div>
-          <label for="first-name">First name</label>
+          <label for="first-name">Prénom</label>
           <input type="text" name="first-name" id="first-name" />
         </div>
         <div>
-          <label for="last-name">Last name</label>
+          <label for="last-name">Nom</label>
           <input type="text" name="last-name" id="last-name" />
         </div>
         <div>
           <label for="message">Message</label>
           <textarea id="message" name="message" rows="5"></textarea>
         </div>
-        <button type="submit">Send</button>
+        <button type="submit">Envoyer</button>
       </form>
     </section>
     <footer class="footer">
