modifications contenu textuel glossaire

--- a/fr/page glossaire.html
+++ b/fr/page glossaire.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Glossaire</title>
+    <title>Glossary</title>
 
     <script src="//unpkg.com/alpinejs" defer></script>
     <link rel="stylesheet" href="/src/css/style.css">
@@ -38,9 +38,36 @@
             </ul>
         </nav>
     </header>
+    <header class="header">
+        <a href="/en/index.html"><img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site"></a>
+        <p class="titre-header">
+            Avatar's Legacy
+        </p>
+        <img class="menu-header" src="/public/icones/menu bleu.svg" alt="menu bleu">
+        <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+            <div class="nav-toggle-bar"></div>
+        </div>
+        <nav class="menu">
+            <ul>
+                <p>ARTICLES</p>
+                <li><a href="/en/page article 1.html">LINE</a></li>
+                <li><a href="/en/page article 2.html">FILM</a></li>
+                <li><a href="/en/page article 3.html">DIRECTOR</a></li>
+                <li><a href="/en/page article 4.html">SOUNDTRACK</a></li>
+                <li><a href="/en/page article 5.html">BOOK</a></li>
+                <p>INFORMATIONS</p>
+                <li><a href="/en/page glossaire.html">GLOSSARY</a></li>
+                <li><a href="/en/page à propos.html">ABOUT US</a></li>
+                <li><a href="/en/page contact.html">CONTACT</a></li>
+                <li><a href="/en/page autres projets.html">OTHER PROJETS</a></li>
+                <hr class="ligne-1">
+                <a href="/fr/index.html"><img class="flag" src="/public/img/french.webp" alt="drapeau francais"></a>
+            </ul>
+        </nav>
+    </header>
     <section class="section-1-1">
     <p class="titre-2">Glossaire</p>
-    <hr class="ligne-1-articleclass="img-articles" ">
+    <hr class="ligne-1-article">
     </section>
     <section>
         <p class="p1">Pandora : Pandora est l'exo-lune de fiction où se déroule le film Avatar de James Cameron. C'est un satellite de Polyphème, une géante gazeuse de couleur bleue. L’air y est irrespirable pour les humains.</p>
