--- a/en/page glossaire.html
+++ b/en/page glossaire.html
@@ -11,57 +11,33 @@
     <link rel="icon" href="/public/icones/header/Logo site Avatar's Legacy 1.svg">
 </head>
 <body>
-    <header class="header">
-        <a href="/en/index.html"><img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site"></a>
-        <p class="titre-header">
-            Avatar's Legacy
-        </p>
-        <img class="menu-header" src="/public/icones/menu bleu.svg" alt="menu bleu">
-        <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
-            <div class="nav-toggle-bar"></div>
-        </div>
-        <nav class="menu">
-            <ul>
-                <p>ARTICLES</p>
-                <li><a href="/en/page article 1.html">LINE</a></li>
-                <li><a href="/en/page article 2.html">FILM</a></li>
-                <li><a href="/en/page article 3.html">DIRECTOR</a></li>
-                <li><a href="/en/page article 4.html">SOUNDTRACK</a></li>
-                <li><a href="/en/page article 5.html">BOOK</a></li>
-                <p>INFORMATIONS</p>
-                <li><a href="/en/page glossaire.html">GLOSSARY</a></li>
-                <li><a href="/en/page à propos.html">ABOUT US</a></li>
-                <li><a href="/en/page contact.html">CONTACT</a></li>
-                <li><a href="/en/page autres projets.html">OTHER PROJETS</a></li>
-                <hr class="ligne-1">
-                <a href="/fr/index.html"><img class="flag" src="/public/img/french.webp" alt="drapeau francais"></a>
-            </ul>
-        </nav>
-    </header>
     <section class="section-1-1">
-    <p class="titre-2">Glossaire</p>
-    <hr class="ligne-1-articleclass="img-articles" ">
-    </section>
-    <section>
-        <p class="p1">Pandora : Pandora est l'exo-lune de fiction où se déroule le film Avatar de James Cameron. C'est un satellite de Polyphème, une géante gazeuse de couleur bleue. L’air y est irrespirable pour les humains.</p>
-        <img class="img-articles" src="/public/img/pandora ile.webp" alt="">
-    </section>
-    <section>
-        <p class="p1">Na'vi : Le na'vi est une langue construite inventée pour la franchise cinématographique Avatar de James Cameron. Il s'agit de la langue des Na'vi, créatures humanoïdes indigènes de la lune Pandora.</p>
-        <img class="img-articles" src="/public/img/rassemblement.webp" alt="">
-    </section>
-    <section>
-        <p class="p1">Banshee : Le Banshee (Nom Na'vi : Ikran) est une créature de Pandora. C'est un grand volatile, que les Na'vis ont pu dompter pour se déplacer dans les airs. Il en existe deux sortes : ceux des montagnes et ceux des forêts.</p>
-        <img class="img-articles" src="/public/img/dragon.webp" alt="">
-    </section>
-    <section>
-        <p class="p1">Thanatos : Le Thanator est une créature de Pandora, peut-être la plus dangereuse. Ce prédateur terrestre a des airs de panthère terrienne, mais elle est une véritable menace pour toutes les autres espèces.</p>
-        <img class="img-articles" src="/public/img/tricératops.webp" alt="">
-    </section>
-    <section class="section-1-2">
-        <p class="p1">Eywa : Dans les films Avatar, Eywa est la divinité du peuple Na'vi. Selon les croyances de ce peuple, il s'agit d'une force protectrice et vivante, un gardien qui maintient l'équilibre sur Pandora.</p>
-        <img class="img-articles" src="/public/img/arbre shinju.webp" alt="">
-    </section>
+        <p class="titre-2">Glossary</p>
+        <hr class="ligne-1-article">
+        </section>
+        <section>
+            <p class="p1">
+                Pandora: Pandora is the fictional moon where James Cameron's film "Avatar" takes place. It's a moon orbiting Polyphemus, a blue-colored gas giant. The atmosphere is unbreathable for humans.</p>
+            <img class="img-articles" src="/public/img/pandora ile.webp" alt="">
+        </section>
+        <section>
+            <p class="p1">
+                Na'vi: The Na'vi language is a constructed language invented for James Cameron's Avatar film franchise. It serves as the language of the Na'vi, the indigenous humanoid creatures of the moon Pandora.</p>
+            <img class="img-articles" src="/public/img/rassemblement.webp" alt="">
+        </section>
+        <section>
+            <p class="p1">
+                Banshee: The Banshee (Na'vi Name: Ikran) is a creature from Pandora. It's a large flying creature that the Na'vi have managed to tame for aerial transportation. There are two types: mountain and forest banshees.</p>
+            <img class="img-articles" src="/public/img/dragon.webp" alt="">
+        </section>
+        <section>
+            <p class="p1">Thanator: The Thanator is a creature from Pandora and perhaps one of the most dangerous. This terrestrial predator bears resemblance to an Earth panther but poses a significant threat to all other species on the moon.</p>
+            <img class="img-articles" src="/public/img/tricératops.webp" alt="">
+        </section>
+        <section class="section-1-2">
+            <p class="p1">Eywa: In the Avatar films, Eywa is the deity of the Na'vi people. According to their beliefs, Eywa is a protective and living force, a guardian that maintains balance on Pandora.</p>
+            <img class="img-articles" src="/public/img/arbre shinju.webp" alt="">
+        </section>
     <footer class="footer">
         <a href="/en/index.html">
         <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
