--- a/en/page contact.html
+++ b/en/page contact.html
@@ -38,24 +38,26 @@
         </ul>
     </nav>
 </header>
-    <section>
-        <h2>Form</h2>
-      <form action="#">
-        <div>
-          <label for="first-name">First name</label>
-          <input type="text" name="first-name" id="first-name" />
-        </div>
-        <div>
-          <label for="last-name">Last name</label>
-          <input type="text" name="last-name" id="last-name" />
-        </div>
-        <div>
-          <label for="message">Message</label>
-          <textarea id="message" name="message" rows="5"></textarea>
-        </div>
-        <button type="submit">Send</button>
-      </form>
-    </section>
+<section class="section-1-1">
+<p class="titre-2">Contact</p>
+</section>
+<section class="section-formulaire">
+<hr class="ligne-1-2">
+  <div>
+    <label for="first-name">First name</label>
+    <input class="formulaire" type="text" name="first-name" id="first-name" />
+  </div>
+  <div>
+    <label for="last-name">Last name</label>
+    <input class="formulaire" type="text" name="last-name" id="last-name" />
+  </div>
+  <div>
+    <label for="message">Message</label>
+    <textarea class="formulaire" id="message" name="message" rows="5"></textarea>
+  </div>
+  <button class="btn-formulaire" type="submit">Send</button>
+</form>
+</section>
     <footer class="footer">
       <a href="/en/index.html">
       <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
