--- a/fr/page contact.html
+++ b/fr/page contact.html
@@ -10,13 +10,33 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <header class="header">
-        <img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
-        <p class="titre-header">
-            Avatar's Legacy
-        </p>
-        <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
-    </header>
+  <header class="header">
+    <a href="/fr/index.html"><img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site"></a>
+    <p class="titre-header">
+        Avatar's Legacy
+    </p>
+    <img class="menu-header" src="/public/icones/menu bleu.svg" alt="menu bleu">
+    <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+        <div class="nav-toggle-bar"></div>
+    </div>
+    <nav class="menu">
+        <ul>
+            <p>ARTICLES</p>
+            <li><a href="/fr/page article 1.html">RÉPLIQUE</a></li>
+            <li><a href="/fr/page article 2.html">FILM</a></li>
+            <li><a href="/fr/page article 3.html">RÉALISATEUR</a></li>
+            <li><a href="/fr/page article 4.html">BANDE SON</a></li>
+            <li><a href="/fr/page article 5.html">LIVRE</a></li>
+            <p>INFORMATIONS</p>
+            <li><a href="/fr/page glossaire.html">GLOSSAIRE</a></li>
+            <li><a href="/fr/page à propos.html">A PROPOS</a></li>
+            <li><a href="/fr/page contact.html">CONTACT</a></li>
+            <li><a href="/fr/page autres projets.html">AUTRES PROJETS</a></li>
+            <hr class="ligne-1">
+            <a href=""><img class="flag" src="/public/img/english.webp" alt="drapeau anglais"></a>
+        </ul>
+    </nav>
+</header>
     <section class="section-1-1">
       <p class="titre-2">Contact</p>
       </section>
@@ -37,28 +57,30 @@
         <button class="btn-formulaire" type="submit">Envoyer</button>
       </form>
       </section>
-    <footer class="footer">
-      <a href="/fr/index.html">
-      <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
-      </a>
-      <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
-      <a href="https://www.instagram.com/explore/tags/avatar/">
-      <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
-      </a>
-      <a href="https://www.facebook.com/avatarlefilm">
-      <img class="logos-footer" src="/public/icones/logo Facebook.svg" alt="">
-      </a>
-      <a href="https://twitter.com/officialavatar">
-      <img class="logos-footer" src="/public/icones/logo X.svg" alt=""> 
-      </a>
-      <a href="https://open.spotify.com/playlist/5xikFhBDZVLs3Cklcxnnki">
-      <img class="logos-footer" src="/public/icones/Vector.svg" alt="">
-      </a>
-      <hr class="ligne">
-      <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
-      <a href="http://www.iut-bm.univ-fcomte.fr/pages/fr/dpt-mmi---actualites-18542.html">
-      <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
-      </a>
-  </footer>
+      <footer class="footer">
+        <a href="/fr/index.html">
+        <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
+        </a>
+        <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
+        <div class="réseaux-sociaux">
+            <a href="https://www.instagram.com/explore/tags/avatar/">
+            <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
+            </a>
+            <a href="https://www.facebook.com/avatarlefilm">
+            <img class="logos-footer" src="/public/icones/logo Facebook.svg" alt="">
+            </a>
+            <a href="https://twitter.com/officialavatar">
+            <img class="logos-footer" src="/public/icones/logo X.svg" alt=""> 
+            </a>
+            <a href="https://open.spotify.com/playlist/5xikFhBDZVLs3Cklcxnnki">
+            <img class="logos-footer" src="/public/icones/Vector.svg" alt="">
+            </a>
+        </div>
+        <hr class="ligne-1-2">
+        <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <a href="http://www.iut-bm.univ-fcomte.fr/pages/fr/dpt-mmi---actualites-18542.html">
+        <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
+        </a>
+    </footer>
 </body>
 </html>
