ajout lien page anglais sur toutes les pages francaises

--- a/fr/page contact.html
+++ b/fr/page contact.html
@@ -33,7 +33,7 @@
             <li><a href="/fr/page contact.html">CONTACT</a></li>
             <li><a href="/fr/page autres projets.html">AUTRES PROJETS</a></li>
             <hr class="ligne-1">
-            <a href=""><img class="flag" src="/public/img/english.webp" alt="drapeau anglais"></a>
+            <a href="/en/index.html"><img class="flag" src="/public/img/english.webp" alt="drapeau anglais"></a>
         </ul>
     </nav>
 </header>
