ajout frise page article 5

--- a/fr/page article 5.html
+++ b/fr/page article 5.html
@@ -60,6 +60,15 @@
         <p>En conclusion, Avatar: Le roman du film est un incontournable pour les fans du film. Il offre un voyage fascinant dans l'univers de Pandora, enrichissant la compréhension des personnages, de la culture Na'vi, et de la planète elle-même. C'est une extension épique de l'histoire cinématographique qui ravira les passionnés de Avatar et les plongera plus profondément dans cette aventure immersive. Mais c’est également une autre manière que le film pour découvrir Avatar pour ceux qui ne l’ont pas vu.</p>
     </section>
     <section>
+        <img class="img-frise" src="/public/img/image livre 1.webp" alt="">
+        <p class="texte-frise">Le champ céleste 2023</p>
+        <img class="img-frise-1" src="/public/img/image livre 2.webp" alt="">
+        <p class="texte-frise-1">Le champ céleste 2022</p>
+        <img class="img-frise-2" src="/public/img/image livre 3.webp" alt="">
+        <p class="texte-frise-2">Le guide de pandora 2022</p>
+        <img class="img-frise-3" src="/public/img/image livre 4.webp" alt="">
+        <p class="texte-frise-3">Le champ céleste 2022</p>
+        <img class="frise" src="/public/icones/fleche-frise.svg" alt="fleche frise">
     </section>
     <footer class="footer">
         <a href="/fr/index.html">
