ajout liens autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -43,57 +43,57 @@
         <hr class="ligne-1-article">
     </section>
     <section>
-        <img class="img-articles" src="/public/img/Asterix et Obelix mission Chleopatre 1.webp" alt="">
+        <a href="https://mission.cleopatre.chloe-vct.fr/"><img class="img-articles" src="/public/img/Asterix et Obelix mission Chleopatre 1.webp" alt=""></a>
         <p>"Mission Cléopâtre" réalisé par Chloé Vincent sur le film “Astérix et Obélix: mission Cléopâtre”</p>
         <hr class="ligne-1-2">
     </section>
     <section>
-        <img class="img-articles" src="/public/img/Kaamelott 1.webp" alt="">
+        <a href="https://kaalsifis.maelle-coquelet.fr/"><img class="img-articles" src="/public/img/Kaamelott 1.webp" alt=""></a>
         <p>"Kaalsifis" réalisé par Maëlle Coquelet sur le film “Kaamelott : Premier Volet”</p>
         <hr class="ligne-1-2">
     </section>
     <section>
-        <img class="img-articles" src="/public/img/Le chateau ambulant 1.webp" alt="">
+        <a href="https://mystichowl.aamrouche.fr/"><img class="img-articles" src="/public/img/Le chateau ambulant 1.webp" alt=""></a>
         <p>“MysticHowl” réalisé par Anis Amrouche sur le film “Le château ambulant”</p>
         <hr class="ligne-1-2">
     </section>
     <section>
-        <img class="img-articles" src="/public/img/affiche-film-hunger-games-26772 1.webp" alt="">
+        <a href="http://hope-games.xn--nolie-talhouarn-cnb.fr/"><img class="img-articles" src="/public/img/affiche-film-hunger-games-26772 1.webp" alt=""></a>
         <p>"Hope Games" réalisé par Noélie Talhouarn sur le film “Hunger Games”</p>
         <hr class="ligne-1-2">
     </section>
     <section>
-        <img class="img-articles" src="/public/img/Alien le 8eme passager 1.webp" alt="">
+        <a href="https://alienfromspaceprinmax.netlify.app/fr/acceuil"><img class="img-articles" src="/public/img/Alien le 8eme passager 1.webp" alt=""></a>
         <p>"Alien from space" réalisé par Max Prin sur le film “Alien le 8eme passager”</p>
         <hr class="ligne-1-2">
     </section>
     <section>
-        <img class="img-articles" src="/public/img/Fight Club 1.webp" alt="">
+        <a href="http://insomniafc.matysouvrard.fr/fr/"><img class="img-articles" src="/public/img/Fight Club 1.webp" alt=""></a>
         <p>"Insomnia" réalisé par Matys Ouvrard sur le film “Fight Club”</p>
         <hr class="ligne-1-2">
     </section>
     <section>
-        <img class="img-articles" src="/public/img/Scarface 1.webp" alt="">
+        <a href="https://scarinfo.boreaniz.fr/"><img class="img-articles" src="/public/img/Scarface 1.webp" alt=""></a>
         <p>"ScarInfo" réalisé par Matthis Boreaniz sur le film "Scarface"</p>
         <hr class="ligne-1-2">
     </section>
     <section>
-        <img class="img-articles" src="/public/img/Le seigneur des anneaux 1.webp" alt="">
+        <a href="http://laconfrerie.breuil-kilian.fr/"><img class="img-articles" src="/public/img/Le seigneur des anneaux 1.webp" alt=""></a>
         <p>"La confrérie" réalisé par Kilian Breuil sur le film “Seigneur des Anneaux : Les Deux Tours”</p>
         <hr class="ligne-1-2">
     </section>
     <section>
-        <img class="img-articles" src="/public/img/Inception 1.webp" alt="">
+        <a href="https://senseception.lolar.fr/fr/"><img class="img-articles" src="/public/img/Inception 1.webp" alt=""></a>
         <p>"Senseception" réalisé par Lola Roth sur le film “Inception”</p>
         <hr class="ligne-1-2">
     </section>
     <section>
-        <img class="img-articles" src="/public/img/Rush 1.webp" alt="">
+        <a href="https://merry-creponne-4cceea.netlify.app/"><img class="img-articles" src="/public/img/Rush 1.webp" alt=""></a>
         <p>"Rush Racing Rivals" réalisé par Antoine Fabre sur le film “Rush”</p>
         <hr class="ligne-1-2">
     </section>
     <section>
-        <img class="img-articles" src="/public/img/Paprika 1.webp" alt="">
+        <a href="https://paprik-ia.netlify.app/"><img class="img-articles" src="/public/img/Paprika 1.webp" alt=""></a>
         <p>"Paprik-IA" réalisé par Ronan Lefour sur le film “Paprika”</p>
         <hr class="ligne-1-2">
     </section>
